Remove dynamic DOM creation in results section

--- a/docs/styles/ospk.css
+++ b/docs/styles/ospk.css
@@ -293,3 +293,11 @@ input.exam_points {
 
 table.ergebnisse { width: 99%; }
 td.ergebnisse { width: 33%; }
+
+#result_B_tbody td {
+    width: 33%;
+}
+
+.right{
+    text-align: right;
+}
