--- a/docs/styles/ospk.css
+++ b/docs/styles/ospk.css
@@ -145,10 +145,10 @@ section.block {
     margin-left: 0px;
     margin-right: 0px;
     background-color: #FFF;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
     overflow: hidden;
 }
 footer {
@@ -180,15 +180,30 @@ footer div {
     font-size: 13px;
     font-weight: bold;
 }
-h1,h2,h3,h4,h5,h6,p { white-space: normal !important; }
+h1,h2,h3,h4,h5,h6,p {
+    color: black;
+    white-space: normal !important;
+}
 h1 {
+    text-align:center;
     font-size: 20px;
     font-weight: bold;
     margin-top: 5px;
-    margin-bottom: 10px;
-    margin-left: 5px;
+    margin-bottom: 5px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    padding: 0px;
+}
+h2 {
+    font-size: 18px;
+    font-weight: bold;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    margin-left: 10px;
     margin-right: 5px;
     padding: 0px;
+    text-decoration: underline;
 }
 h3 {
     font-size: 16px;
@@ -200,24 +215,10 @@ h3 {
     padding: 0px;
 }
 
-.main_title {
-    color: black;
-    font-weight: bold;
-    font-size: 20px;
-}
 .name_title {
     color: black;
     font-weight: bold;
     font-size: 16px;
-}
-.section_title {
-    color: black;
-    line-height: 1.2em;
-    font-weight: bold;
-    font-size: 18px;
-    text-decoration: underline;
-    margin-top: 30px;
-    margin-bottom: 20px;
 }
 
 /* Opciók választása */
