Simplify section styling

--- a/docs/styles/ospk.css
+++ b/docs/styles/ospk.css
@@ -55,7 +55,6 @@ body {
 @media handheld or (max-width: 1024px) { body, div.header, footer div { width: 100%; } }
 header, nav, main, section, article, hgroup, aside, footer { display: block; }
 header, nav, footer { width: 100%; }
-section { width: auto; }
 header {
     position: absolute;
     top: 0px;
@@ -134,9 +133,7 @@ img.header {
     }
 }
 section {
-
-}
-section.block {
+    width: auto;
     display: block;
     position: relative;
     top: 0px;
@@ -145,12 +142,23 @@ section.block {
     margin-left: 0px;
     margin-right: 0px;
     background-color: #FFF;
+    overflow: hidden;
+}
+
+main section {
     padding-top: 15px;
     padding-bottom: 15px;
     padding-left: 15px;
     padding-right: 15px;
-    overflow: hidden;
 }
+
+aside section {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
 footer {
     display: block;
     position: absolute;
