--- a/docs/styles/ospk.css
+++ b/docs/styles/ospk.css
@@ -29,6 +29,7 @@ html {
     /*font-family: Tahoma, Geneva, sans-serif;*/
     /*font-family: Verdana, Geneva, sans-serif;*/
 }
+
 body {
     display: block;
 
@@ -50,11 +51,34 @@ body {
     height: auto;
     /* min-height: 100%; */
 }
-@media screen and (min-width: 1215px) { body, div.header, footer div { width: 80%; } }
-@media screen and (min-width: 1025px) and (max-width: 1214px) { body, div.header, footer div { width: 90%; } }
-@media handheld or (max-width: 1024px) { body, div.header, footer div { width: 100%; } }
-header, nav, main, section, article, hgroup, aside, footer { display: block; }
-header, nav, footer { width: 100%; }
+
+@media screen and (min-width: 1215px) {
+
+    body, div.header, footer div {
+        width: 80%;
+    }
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1214px) {
+    body, div.header, footer div {
+        width: 90%;
+    }
+}
+
+@media handheld or (max-width: 1024px) {
+    body, div.header, footer div {
+        width: 100%;
+    }
+}
+
+header, nav, main, section, article, hgroup, aside, footer {
+    display: block;
+}
+
+header, nav, footer {
+    width: 100%;
+}
+
 header {
     position: absolute;
     top: 0px;
@@ -68,6 +92,7 @@ header {
     width: 100%;
     background-color: #213C84;
 }
+
 div.header {
     height: 80px;
     margin-top: 0px;
@@ -79,6 +104,7 @@ div.header {
     padding-left: 0px;
     padding-right: 0px;
 }
+
 img.header {
     margin-top: 8px;
     margin-left: 0px;
@@ -89,10 +115,13 @@ img.header {
     padding-left: 0px;
     padding-right: 0px;
 }
+
 @media all {
+
     main,aside {
         min-height: 100%;
     }
+
     main {
         margin-top: 0px;
         margin-bottom: 0px;
@@ -100,38 +129,48 @@ img.header {
         padding: 0px;
     }
 }
+
 @media screen and (min-width: 1215px) {
+
     main {
         margin-right: 5px;
         width: 75%;
     }
+
     aside {
         float: right;
         margin-left: 5px;
         width: 21%;
     }
 }
+
 @media screen and (min-width: 1025px) and (max-width: 1214px) {
+
     main {
         margin-right: 2px;
         width: 78%;
     }
+
     aside {
         float: right;
         margin-left: 2px;
         width: 20%;
     }
 }
+
 @media handheld or (max-width: 1024px) {
+
     main {
         margin: 0px;
         width: 100%;
     }
+
     aside {
         margin: 0px;
         width: 100%;
     }
 }
+
 section {
     width: auto;
     display: block;
@@ -176,6 +215,7 @@ footer {
     width: 100%;
     overflow: hidden;
 }
+
 footer div {
     margin-top: 0px;
     margin-bottom: 0px;
@@ -188,10 +228,12 @@ footer div {
     font-size: 13px;
     font-weight: bold;
 }
+
 h1,h2,h3,h4,h5,h6,p {
     color: black;
     white-space: normal !important;
 }
+
 h1 {
     text-align:center;
     font-size: 20px;
@@ -203,6 +245,7 @@ h1 {
     width: 100%;
     padding: 0px;
 }
+
 h2 {
     font-size: 18px;
     font-weight: bold;
@@ -213,6 +256,7 @@ h2 {
     padding: 0px;
     text-decoration: underline;
 }
+
 h3 {
     font-size: 16px;
     font-weight: bold;
@@ -238,6 +282,7 @@ h3 {
     font-size: 18px;
     text-decoration: underline;
 }
+
 .questions {
     color: black;
     line-height: 1.0em;
@@ -245,6 +290,7 @@ h3 {
     font-size: 16px;
     text-indent: 40px;
 }
+
 .send{ }
 
 /* Fakultációk választása */
@@ -291,13 +337,23 @@ table.exams {
     margin-right: auto;
     width: 500px;
 }
-tr.exams { height: 25px; }
+
+tr.exams {
+    height: 25px;
+}
+
 td.exam_no { }
+
 td.exam_type { }
+
 td.exam_subject { }
+
 select.exam_subject { }
+
 option.exam_subject { }
+
 td.exam_points { }
+
 input.exam_points {
     width: 40px;
     text-align: center;
@@ -305,8 +361,13 @@ input.exam_points {
 
 /* Összesített eredmények */
 
-table.ergebnisse { width: 99%; }
-td.ergebnisse { width: 33%; }
+table.ergebnisse {
+    width: 99%;
+}
+
+td.ergebnisse {
+    width: 33%;
+}
 
 #result_B_tbody td {
     width: 33%;
