Move style to stylesheet

--- a/docs/styles/ospk.css
+++ b/docs/styles/ospk.css
@@ -268,6 +268,10 @@ aside h2 {
     text-indent: 40px;
 }
 
+#branches div {
+    cursor: pointer;
+}
+
 /* Fakultációk választása */
 
 input.q_answers { }
