--- a/docs/styles/ospk.css
+++ b/docs/styles/ospk.css
@@ -265,19 +265,54 @@ aside h2 {
 
 /* branches --------------------------------------------------------- */
 
-#branches table {
-    margin-left: 20px;
-}
-
-#branches td {
+#branches {
     padding-left: 20px;
     padding-right: 20px;
+}
+
+#branches div {
+    display: inline-block;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+#branches span {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+#branches span:first-of-type {
+    margin-right: 20px;
     font-weight: bold;
     font-size: 16px;
 }
 
-#branches div {
+#branches span:last-of-type {
+    height: 32px;
     cursor: pointer;
+}
+
+#branches img,
+#branches input {
+    margin: 0px;
+    height: 30px;
+    border-width: 1px;
+    border-style: outset;
+}
+
+#branches img {
+    width: 50px;
+}
+
+#branches input {
+    padding: 6px;
+    line-height: 1em;
+    font-size: 14px;
+}
+
+#branches img:active,
+#branches input:active {
+    border-style: inset;
 }
 
 /* options ---------------------------------------------------------- */
