Correct W3 HTML validation errors

--- a/docs/styles/ospk.css
+++ b/docs/styles/ospk.css
@@ -379,6 +379,12 @@ aside h2 {
     text-align: center;
 }
 
+/* buttons ---------------------------------------------------------- */
+
+#buttons a {
+    display: none;
+}
+
 /* results ---------------------------------------------------------- */
 
 #results table {
